(library
 (name aoc25_lib)
 (modules grid)
 (wrapped false)
 (libraries base)
 (preprocess (pps ppx_jane)))

(executable
 (name day1)
 (modules day1)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))

(executable
 (name day2)
 (modules day2)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))

(executable
 (name day3)
 (modules day3)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))

(executable
 (name day4)
 (modules day4)
 (libraries base stdio aoc25_lib)
 (preprocess (pps ppx_jane)))

(executable
 (name day5)
 (modules day5)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))

(executable
 (name day6)
 (modules day6)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))

(executable
 (name day7)
 (modules day7)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))

(executable
 (name day8)
 (modules day8)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))

(executable
 (name day9)
 (modules day9)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))

(executable
 (name day10)
 (modules day10)
 (libraries base stdio core_unix)
 (preprocess (pps ppx_jane)))

(executable
 (name day11)
 (modules day11)
 (libraries base stdio)
 (preprocess (pps ppx_jane)))